[gd_scene load_steps=6 format=3 uid="uid://ck404d831634p"]

[ext_resource type="Script" uid="uid://cykjs6eyv4kwk" path="res://Scripts/pipe.gd" id="1_0qor5"]
[ext_resource type="Texture2D" uid="uid://cvn47ctw3vdpp" path="res://Assets/sprites/pipe-green.png" id="1_6slty"]
[ext_resource type="PackedScene" uid="uid://cvmw50c65c4uf" path="res://Scenes/Environment/check.tscn" id="3_xx022"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xx022"]
size = Vector2(47, 523)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iso1r"]
size = Vector2(52, 480)

[node name="DOWN" type="StaticBody2D"]
script = ExtResource("1_0qor5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 261.5)
shape = SubResource("RectangleShape2D_xx022")

[node name="Sprite" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, -101.5)
texture = ExtResource("1_6slty")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(0, 145)
texture = ExtResource("1_6slty")
flip_v = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 241)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_iso1r")

[node name="Point_check" parent="." instance=ExtResource("3_xx022")]
position = Vector2(24, -2)

[connection signal="increase_point" from="." to="." method="_on_increase_point"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Point_check" to="." method="_on_point_check_body_entered"]
